Update print statement from 'Hello' to 'Goodbye'
Resolvido

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
-      if(!ENDPOINT_URL || ENDPOINT_URL.includes("https://script.google.com/macros/s/AKfycbwgM0zVZQDb0Fk-Jzv3e7NFXFYU44HYya2mBT_jj94TYnF6L0I1-hDEsGLG_EhcLvBVMA/exec")){
+      if(!ENDPOINT_URL || ENDPOINT_URL.includes("COLE_AQUI")){
         setStatus("err", "você ainda não colou a URL do Apps Script no ENDPOINT_URL.");
         return;
       }
@@ -577,3 +577,4 @@
   </script>
 </body>
 </html>
+
